@startuml
title "Trendlapse API - Entity Relationship Diagram"

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Channel" as channel {
  * id : long <<PK>>
  --
  * youtube_id : varchar
  * title : varchar
  thumbnail_url : varchar
}

entity "Video" as video {
  * id : long <<PK>>
  --
  * youtube_id : varchar
  * channel_id : long <<FK>>
  * title : varchar
  thumbnail_url : varchar
}

entity "Region" as region {
  * id : long <<PK>>
  --
  * region_code : varchar
  * name : varchar
  * iso_code : varchar
}

entity "Trending" as trending {
  * id : long <<PK>>
  --
  * date_time : datetime
  * video_id : long <<FK>>
  * region_id : long <<FK>>
  * rank_value : integer
}

channel ||--o{ video
region ||--o{ trending
video ||--o{ trending

@enduml